Updating config.yaml to indicate that After6 Services is providing support
We are replacing references to Byrne Reese, Melody, and Open Melody with After6 Services and Movable Type 5/6. The reasons are because Byrne is no longer maintaining Config Assistant, Open Melody Software Group is defunct, and After6 Services is maintaining Config Assistant going for Movable Type 5 and 6 going forward.

We maintain references to Byrne Reese, Jay Allen, and Dan Wolfgang in README.md.

--- a/addons/ConfigAssistant.pack/config.yaml
+++ b/addons/ConfigAssistant.pack/config.yaml
@@ -1,11 +1,12 @@
 name: Configuration Assistant
 id: ConfigAssistant
 key: ConfigAssistant
-author_link: https://github.com/openmelody/mt-plugin-configassistant
-author_name: "Byrne Reese, Open Melody Software Group"
+author_link: http://www.after6services.com/plugins/
+author_name: After6 Services LLC
+author_email: customer.service@after6services.com
 description: This plugin provides a simple YAML based framework for creating plugin and theme configuration options.
-version: 2.5.25
-static_version: 22
+version: 2.5.26
+static_version: 23
 schema_version: 4
 
 object_types:
@@ -100,6 +101,6 @@ config_types:
 blog_preferences:
   __default__:
     label: 'Factory Default'
-    description: 'These are the default factory settings for Melody.'
+    description: 'These are the default factory settings for Movable Type 5/6.'
     order: 1
     preferences: default_prefs.yaml
